@@ -26,6 +26,7 @@
     + Location data missing in exports. (#2833);
     + Check mysqldump path when exporting database;
     + Current rack position missing when editing a device. (#2545);
+    + Permit colon in firewall zone interface names (#2737);
     + API:
         + Fixed /user/ calls for SSL with app code (static app code);
 
